--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "dependencies": {
     "@eslint-community/eslint-utils": "^4.2.0",
     "@eslint-community/regexpp": "^4.4.0",
-    "@eslint/eslintrc": "^2.0.3",
+    "@eslint/eslintrc": "github:unmind/eslintrc",
     "@eslint/js": "8.41.0",
     "@humanwhocodes/config-array": "^0.11.8",
     "@humanwhocodes/module-importer": "^1.0.1",
